# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("ark_aot_test") {
  testonly = true
  deps = [
    "add:addAotAction",
    "and:andAotAction",
    "ashr:ashrAotAction",
    "createarraywithbuffer:createarraywithbufferAotAction",
    "createemptyarray:createemptyarrayAotAction",
    "createemptyobject:createemptyobjectAotAction",
    "createobjectwithbuffer:createobjectwithbufferAotAction",
    "createregexpwithliteral:createregexpwithliteralAotAction",
    "dec:decAotAction",

    # "definefunc:definefuncAotAction",
    "delobjprop:delobjpropAotAction",
    "div:divAotAction",
    "exp:expAotAction",
    "helloaot:helloaotAotAction",
    "inc:incAotAction",
    "instanceof:instanceofAotAction",
    "isin:isinAotAction",
    "ldfunctionpref:ldfunctionprefAotAction",
    "ldglobalvar:ldglobalvarAotAction",
    "ldobjbyname:ldobjbynameAotAction",
    "logic_op:logic_opAotAction",
    "mod:modAotAction",
    "mul:mulAotAction",
    "neg:negAotAction",
    "not:notAotAction",
    "or:orAotAction",
    "setobjectwithproto:setobjectwithprotoAotAction",
    "shl:shlAotAction",
    "shr:shrAotAction",
    "starrayspread:starrayspreadAotAction",
    "stconsttoglobalrecord:stconsttoglobalrecordAotAction",
    "stglobalvar:stglobalvarAotAction",
    "stlettoglobalrecord:stlettoglobalrecordAotAction",
    "stobjbyname:stobjbynameAotAction",
    "stownbyindex:stownbyindexAotAction",
    "stownbyname:stownbynameAotAction",
    "stownbyvalue:stownbyvalueAotAction",
    "strictequal:strictequalAotAction",
    "strictnotequal:strictnotequalAotAction",
    "sub:subAotAction",
    "throw:throwAotAction",
    "tonumber:tonumberAotAction",
    "trystglobalbynameprefid32:trystglobalbynameprefid32AotAction",
    "typeof:typeofAotAction",
    "xor:xorAotAction",
  ]
}
