# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("ark_aot_test") {
  testonly = true
  deps = [
    "add:addAotAction",
    "and:andAotAction",
    "aot_compatibility_test:aot_compatibility_test",
    "ashr:ashrAotAction",
    "copyrestargs:copyrestargsAotAction",
    "createarraywithbuffer:createarraywithbufferAotAction",
    "createemptyarray:createemptyarrayAotAction",
    "createemptyobject:createemptyobjectAotAction",
    "createobjecthavingmethod:createobjecthavingmethodAotAction",
    "createobjectwithbuffer:createobjectwithbufferAotAction",
    "createregexpwithliteral:createregexpwithliteralAotAction",
    "dec:decAotAction",
    "defineclasswithbuffer:defineclasswithbufferAotAction",

    # "definefunc:definefuncAotAction",
    # "definemethod:definemethodAotAction",
    # "definencfunc:definencfuncAotAction",
    "delobjprop:delobjpropAotAction",
    "div:divAotAction",
    "duplicatefunctions:duplicatefunctionsAotAction",
    "exceptionhandler:exceptionhandlerAotAction",
    "exp:expAotAction",
    "helloaot:helloaotAotAction",
    "inc:incAotAction",
    "instanceof:instanceofAotAction",
    "isfalse:isfalseAotAction",
    "isin:isinAotAction",
    "istrue:istrueAotAction",
    "ldfunctionpref:ldfunctionprefAotAction",
    "ldglobalvar:ldglobalvarAotAction",
    "ldobjbyname:ldobjbynameAotAction",
    "logic_op:logic_opAotAction",
    "loops:loopsAotAction",
    "mod:modAotAction",
    "mul:mulAotAction",
    "neg:negAotAction",
    "new:newAotAction",
    "newlexenv:newlexenvAotAction",
    "not:notAotAction",
    "or:orAotAction",
    "poplexenv:poplexenvAotAction",
    "setobjectwithproto:setobjectwithprotoAotAction",
    "shl:shlAotAction",
    "shr:shrAotAction",
    "starrayspread:starrayspreadAotAction",
    "stclasstoglobalrecord:stclasstoglobalrecordAotAction",
    "stconsttoglobalrecord:stconsttoglobalrecordAotAction",
    "stglobalvar:stglobalvarAotAction",
    "stlettoglobalrecord:stlettoglobalrecordAotAction",
    "stobjbyname:stobjbynameAotAction",
    "stownbyindex:stownbyindexAotAction",
    "stownbyname:stownbynameAotAction",
    "stownbynamewithnameset:stownbynamewithnamesetAotAction",
    "stownbyvalue:stownbyvalueAotAction",

    #"stownbyvaluewithnameset:stownbyvaluewithnamesetAotAction",
    "strictequal:strictequalAotAction",
    "strictnotequal:strictnotequalAotAction",
    "sub:subAotAction",
    "throw:throwAotAction",
    "throwundefindeifhole:throwundefindeifholeAotAction",
    "tonumber:tonumberAotAction",
    "trystglobalbynameprefid32:trystglobalbynameprefid32AotAction",
    "typeof:typeofAotAction",
    "xor:xorAotAction",
  ]
}
