# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("ark_aot_test") {
  testonly = true
  deps = [
    "add:addAotAction",
    "and:andAotAction",
    "aot_compatibility_test:aot_compatibility_test",
    "ashr:ashrAotAction",

    #"asyncfunctionenter:asyncfunctionenterAotAction",
    #bigint_typed_array_constructors:js
    "bind:bindAotAction",

    #call_default_args:js
    #"call_same_bytecode_func:call_same_bytecode_funcAotAction",
    "callithisrange:callithisrangeAotAction",
    "calls:callsAotAction",
    "closeiterator:closeiteratorAotAction",
    "copyrestargs:copyrestargsAotAction",
    "createarraywithbuffer:createarraywithbufferAotAction",
    "createemptyarray:createemptyarrayAotAction",
    "createemptyobject:createemptyobjectAotAction",

    #creategeneratorobj:creategeneratorobjAotAction",
    #"createiterresultobj:createiterresultobjAotAction",

    "createobjecthavingmethod:createobjecthavingmethodAotAction",
    "createobjectwithbuffer:createobjectwithbufferAotAction",
    "createregexpwithliteral:createregexpwithliteralAotAction",

    #constructor_returns_non_object:js
    "dec:decAotAction",
    "defineasyncfunc:defineasyncfuncAotAction",
    "defineclasswithbuffer:defineclasswithbufferAotAction",
    "definefunc:definefuncAotAction",
    "definefunc_variable_args:definefunc_variable_argsAotAction",

    #"definegeneratorfunc:definegeneratorfuncAotAction",
    #"definegettersetterbyvalue:definegettersetterbyvalueAotAction",
    "definemethod:definemethodAotAction",
    "definencfunc:definencfuncAotAction",
    "delobjprop:delobjpropAotAction",

    #"destructuring:destructuringAotAction",
    "div:divAotAction",
    "duplicatefunctions:duplicatefunctionsAotAction",
    "exceptionhandler:exceptionhandlerAotAction",
    "exp:expAotAction",
    "getiterator:getiteratorAotAction",

    #"getiteratornext:getiteratornextAotAction",
    "getnextpropname:getnextpropnameAotAction",
    "getpropiterator:getpropiteratorAotAction",

    #"getresumemode:getresumemodeAotAction",
    #"gettemplateobject:gettemplateobjectAotAction",
    #"getunmappedargs:getunmappedargsAotAction",
    "helloaot:helloaotAotAction",
    "inc:incAotAction",
    "instanceof:instanceofAotAction",
    "isfalse:isfalseAotAction",
    "isin:isinAotAction",
    "istrue:istrueAotAction",

    #"ldbigint:ldbigintAotAction",
    "ldconst:ldconstAotAction",
    "ldfunctionpref:ldfunctionprefAotAction",
    "ldglobalvar:ldglobalvarAotAction",
    "ldobjbyname:ldobjbynameAotAction",
    "ldstlexvar:ldstlexvarAotAction",

    #"ldsuperbyname:ldsuperbynameAotAction",
    "logic_op:logic_opAotAction",
    "loops:loopsAotAction",
    "mod:modAotAction",
    "mul:mulAotAction",
    "neg:negAotAction",
    "new:newAotAction",
    "newlexenv:newlexenvAotAction",
    "newobjspread:newobjspreadAotAction",
    "not:notAotAction",
    "or:orAotAction",
    "poplexenv:poplexenvAotAction",

    #"resumegenerator:resumegeneratorAotAction",
    "setobjectwithproto:setobjectwithprotoAotAction",
    "shl:shlAotAction",
    "shr:shrAotAction",
    "starrayspread:starrayspreadAotAction",
    "stclasstoglobalrecord:stclasstoglobalrecordAotAction",
    "stconsttoglobalrecord:stconsttoglobalrecordAotAction",
    "stglobalvar:stglobalvarAotAction",
    "stlettoglobalrecord:stlettoglobalrecordAotAction",

    #"stobjbyindex:stobjbyindexAotAction",
    "stobjbyname:stobjbynameAotAction",

    #"stobjbyvalue:stobjbyvalueAotAction",
    "stownbyindex:stownbyindexAotAction",
    "stownbyname:stownbynameAotAction",
    "stownbynamewithnameset:stownbynamewithnamesetAotAction",
    "stownbyvalue:stownbyvalueAotAction",
    "stownbyvaluewithnameset:stownbyvaluewithnamesetAotAction",
    "strictequal:strictequalAotAction",
    "strictnotequal:strictnotequalAotAction",

    #stsuperbyname:stsuperbynameAotAction",
    "sub:subAotAction",

    #"supercall:supercallAotAction",
    #"supercallspread:supercallspreadAotAction",
    "suspendgenerator:suspendgeneratorAotAction",
    "suspendgeneratorbranch:suspendgeneratorbranchAotAction",

    #"suspendgeneratorfor:suspendgeneratorforAotAction",
    "suspendgeneratorphi:suspendgeneratorphiAotAction",
    "suspendgeneratorreturn:suspendgeneratorreturnAotAction",
    "suspendgeneratorthrow:suspendgeneratorthrowAotAction",
    "throw:throwAotAction",
    "throwifsupernotcorrectcall:throwifsupernotcorrectcallAotAction",
    "throwundefindeifhole:throwundefindeifholeAotAction",
    "tonumber:tonumberAotAction",
    "trystglobalbynameprefid32:trystglobalbynameprefid32AotAction",
    "typeof:typeofAotAction",

    #undefined:js
    "xor:xorAotAction",
  ]
}
